update portfolio.html index.html style.css
add BEM classes

--- a/index.html
+++ b/index.html
@@ -361,48 +361,48 @@
 				</ul>
 			</div>
 		</section>
-		<section class="section customers-section">
+		<section class="section">
 			<div class="container">
 				<h2 class="title">Постійні клієнти</h2>
 				<ul class="list customers-list">
-					<li class="customers-item">
-						<a class="link customers-link" href="">
-							<svg class="customers-icon" width="106" height="60">
+					<li>
+						<a class="link customers-list__link" href="">
+							<svg class="customers-list__icon" width="106" height="60">
 								<use href="./images/icons.svg#icon-yaco"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="customers-item">
-						<a class="link customers-link" href="">
-							<svg class="customers-icon" width="106" height="60">
+					<li>
+						<a class="link customers-list__link" href="">
+							<svg class="customers-list__icon" width="106" height="60">
 								<use href="./images/icons.svg#icon-tagline-here"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="customers-item">
-						<a class="link customers-link" href="">
-							<svg class="customers-icon" width="106" height="60">
+					<li>
+						<a class="link customers-list__link" href="">
+							<svg class="customers-list__icon" width="106" height="60">
 								<use href="./images/icons.svg#icon-company"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="customers-item">
-						<a class="link customers-link" href="">
-							<svg class="customers-icon" width="106" height="60">
+					<li>
+						<a class="link customers-list__link" href="">
+							<svg class="customers-list__icon" width="106" height="60">
 								<use href="./images/icons.svg#icon-foster-peters"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="customers-item">
-						<a class="link customers-link" href="">
-							<svg class="customers-icon" width="106" height="60">
+					<li>
+						<a class="link customers-list__link" href="">
+							<svg class="customers-list__icon" width="106" height="60">
 								<use href="./images/icons.svg#icon-brand"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="customers-item">
-						<a class="link customers-link" href="">
-							<svg class="customers-icon" width="106" height="60">
+					<li>
+						<a class="link customers-list__link" href="">
+							<svg class="customers-list__icon" width="106" height="60">
 								<use href="./images/icons.svg#icon-company-tagline"></use>
 							</svg>
 						</a>
