--- a/portfolio.html
+++ b/portfolio.html
@@ -22,31 +22,31 @@
 	<header class="page-header">
 		<div class="container">
 			<div class="header-container">
-				<nav class="site-nav">
+				<nav class="header-nav">
 					<a class="logo" href="./index.html">Web<span class="logo-header">Studio</span></a>
-					<ul class="list header-list">
-						<li class="nav-item">
-							<a class="link nav-link" href="./index.html">Студія</a>
+					<ul class="list header-nav__list">
+						<li class="header-nav__item">
+							<a class="link header-nav__link" href="./index.html">Студія</a>
 						</li>
-						<li class="nav-item">
-							<a class="link nav-link current" href="./portfolio.html">Портфоліо</a>
+						<li class="header-nav__item">
+							<a class="link header-nav__link header-nav__link--current" href="./portfolio.html">Портфоліо</a>
 						</li>
-						<li class="nav-item">
-							<a class="link nav-link" href="#">Контакти</a>
+						<li class="header-nav__item">
+							<a class="link header-nav__link" href="#">Контакти</a>
 						</li>
 					</ul>
 				</nav>
 				<ul class="list header-address">
-					<li class="address-item">
-						<a class="link address-link" href="mailto:info@devstudio.com">
+					<li class="header-address__item">
+						<a class="link header-address__link" href="mailto:info@devstudio.com">
 							<svg width="16" height="12">
 								<use href="./images/icons.svg#icon-envelope"></use>
 							</svg>
 							info@devstudio.com
 						</a>
 					</li>
-					<li class="address-item">
-						<a class="link phone-link" href="tel:+380961111111">
+					<li class="header-address__item">
+						<a class="link header-address__link" href="tel:+380961111111">
 							<svg width="10" height="16">
 								<use href="./images/icons.svg#icon-smartphone"></use>
 							</svg>
