--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>goit-markup-hw-07</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-		integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="./css/styles.css" />
+
+	<link rel="stylesheet" href="./css/main.min.css" />
 
 </head>
 
@@ -23,7 +16,7 @@
 		<div class="container">
 			<div class="header-container">
 				<nav class="header-nav">
-					<a class="logo" href="./index.html">Web<span class="logo-header">Studio</span></a>
+					<a class="logo" href="./index.html">Web<span class="logo logo--black">Studio</span></a>
 					<ul class="list header-nav__list">
 						<li class="header-nav__item">
 							<a class="link header-nav__link header-nav__link--current" href="./index.html">Студія</a>
@@ -414,9 +407,9 @@
 
 	<footer class="page-footer">
 		<div class="container footer-container">
-			<div class="footer-address">
-				<a class="logo" href="./index.html">Web<span class="logo__footer">Studio</span></a>
-				<address class="address">
+			<div>
+				<a class="logo" href="./index.html">Web<span class="logo logo--white">Studio</span></a>
+				<address class="footer-address">
 					<ul class="list">
 						<li class="footer-address__street">
 							<a class="link" href="https://goo.gl/maps/2ffVsnF2zKhLbxtcA" target="_blank"
@@ -434,31 +427,31 @@
 			</div>
 			<div class="footer-network">
 				<h3 class="footer-title">приєднуйтесь</h3>
-				<ul class="list footer-network__list">
+				<ul class="list network-list">
 					<li>
-						<a class="link footer-network__link" href="">
-							<svg class="footer-network__icon" width="20" height="20">
+						<a class="link network-list__link" href="">
+							<svg class="network-list__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-instagram"></use>
 							</svg>
 						</a>
 					</li>
 					<li>
-						<a class="footer-network__link" href="">
-							<svg class="footer-network__icon" width="20" height="20">
+						<a class="link network-list__link" href="">
+							<svg class="network-list__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-twitter"></use>
 							</svg>
 						</a>
 					</li>
 					<li>
-						<a class="footer-network__link" href="">
-							<svg class="footer-network__icon" width="20" height="20">
+						<a class="link network-list__link" href="">
+							<svg class="network-list__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-facebook"></use>
 							</svg>
 						</a>
 					</li>
 					<li>
-						<a class="footer-network__link" href="">
-							<svg class="footer-network__icon" width="20" height="20">
+						<a class="link network-list__link" href="">
+							<svg class="network-list__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-linkedin"></use>
 							</svg>
 						</a>
@@ -466,12 +459,12 @@
 				</ul>
 			</div>
 
-			<div class="footer-mailing">
+			<div class="footer-subscription">
 				<h3 class="footer-title">Підпишіться на розсилку</h3>
-				<ul class="list footer-mailing__list">
-					<li><input class="footer-mailing__frm" id="mail" type="email" name="mail" placeholder="E-mail" /></li>
-					<li><button class="footer-mailing__btn" type="button">Підписатися
-							<svg class="footer-mailing__icon" width="20" height="20">
+				<ul class="list subscription-list">
+					<li><input class="subscription-list__frm" id="mail" type="email" name="mail" placeholder="E-mail" /></li>
+					<li><button class="subscription-list__btn" type="button">Підписатися
+							<svg class="subscription-list__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-send"></use>
 							</svg>
 						</button></li>
